[tool.poetry]
name = "checker-proxy"
version = "0.1.0"
description = ""
authors = ["vim9bot "]
readme = "README.md"
packages = [{include = "checker_proxy"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
pydantic-settings = "^2.1.0"
httpx = {extras = ["socks"], version = "^0.26.0"}
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
